prevent slideshow overflow

--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: row;
   gap: 1rem;
+  overflow-x: auto;
 }
 
 .imageslideshow {
